change sizes of skills svg

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             </thead>
                             <tbody>
                             <tr>
-                                <td class="bg-light" style="padding-top: 8px;"><img src="src/img/tech/php.svg"></td>
+                                <td class="bg-light" style="padding-top: 8px;"><img class="w-50" src="src/img/tech/php.svg"></td>
                                 <td class="bg-light">
                                     <div class="progress border rounded-pill border-dark">
                                         <div class="progress-bar progress-bar-animated text-bg-warning progress-bar-striped progress-bar-animated" aria-valuenow="50"
@@ -210,7 +210,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="bg-light" style="padding-top: 8px;"><img src="src/img/tech/symfony.svg"></td>
+                                <td class="bg-light" style="padding-top: 8px;"><img class="w-50" src="src/img/tech/symfony.svg"></td>
                                 <td class="bg-light">
                                     <div class="progress border rounded-pill border-dark">
                                         <div class="progress-bar text-bg-warning progress-bar-striped progress-bar-animated" aria-valuenow="50" aria-valuemin="0"
@@ -220,7 +220,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="bg-light" style="padding-top: 8px;"><img src="src/img/tech/git.svg"></td>
+                                <td class="bg-light" style="padding-top: 8px;"><img class="w-50"src="src/img/tech/git.svg"></td>
                                 <td class="bg-light">
                                     <div class="progress border rounded-pill border-dark">
                                         <div class="progress-bar text-bg-danger progress-bar-striped progress-bar-animated" aria-valuenow="10" aria-valuemin="0"
@@ -230,7 +230,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="bg-light" style="padding-top: 8px;"><img src="src/img/mysql-horizontal.svg">
+                                <td class="bg-light" style="padding-top: 8px;"><img class="w-50" src="src/img/mysql-horizontal.svg">
                                 </td>
                                 <td class="bg-light">
                                     <div class="progress border rounded-pill border-dark">
@@ -241,7 +241,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="bg-light" style="padding-top: 8px;"><img src="src/img/tech/javascript.svg">
+                                <td class="bg-light" style="padding-top: 8px;"><img class="w-50" src="src/img/tech/javascript.svg">
                                 </td>
                                 <td class="bg-light">
                                     <div class="progress border rounded-pill border-dark">
@@ -252,7 +252,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="bg-light" style="padding-top: 8px;"><img src="src/img/tech/html5.svg"></td>
+                                <td class="bg-light" style="padding-top: 8px;"><img class="w-50" src="src/img/tech/html5.svg"></td>
                                 <td class="bg-light">
                                     <div class="progress border rounded-pill border-dark prgrs-bar">
                                         <div class="progress-bar text-bg-warning progress-bar-striped progress-bar-animated" aria-valuenow="50" aria-valuemin="0"
@@ -262,7 +262,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="bg-light" style="padding-top: 8px;"><img src="src/img/tech/Bootstrap.svg" style="height: 60px"></td>
+                                <td class="bg-light" style="padding-top: 8px;"><img class="w-50" src="src/img/tech/Bootstrap.svg" ></td>
                                 <td class="bg-light">
                                     <div class="progress-container">
                                         <div class="progress border rounded-pill border-dark prgrs-bar">
